Fix 9638 - Prevent excessive overflow from swap dropdowns

--- a/ui/app/pages/swaps/build-quote/index.scss
+++ b/ui/app/pages/swaps/build-quote/index.scss
@@ -16,6 +16,8 @@
 
   &__content {
     display: flex;
+    max-width: 360px;
+    overflow: hidden;
   }
 
   &__dropdown-swap-to-header {
