--- a/ui/app/pages/swaps/dropdown-search-list/index.scss
+++ b/ui/app/pages/swaps/dropdown-search-list/index.scss
@@ -126,6 +126,9 @@
     background: white;
     border-radius: 6px;
     min-height: 194px;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   &__loading-item {
